# ratsh

./: .clang-format  .clang-tidy  AST.cpp  AST.h  Builtins.cpp  Builtins.h  CMakeLists.txt  FileDescription.cpp  FileDescription.h  LICENSE  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  README.md  Shell.cpp  Shell.h  Value.h  main.cpp
CMake/: GoogleTest.cmake
Tests/: TestLexer.cpp
cmake/: FetchGoogleTest.cmake
src/: AST.cpp  AST.h  ArgsParser.cpp  ArgsParser.h  Builtins.cpp  CMakeLists.txt  FileDescription.cpp  Lexer.cpp  Parser.cpp  Parser.h  Shell.cpp  Shell.h  Value.h  main.cpp
tests/: CMakeLists.txt  TestArgsParser.cpp  TestLexer.cpp
